feat: add website config

--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle: ''
+title: Chunill Notes
+subtitle: '阿千的筆記堆'
 description: ''
 keywords:
-author: John Doe
-language: en
+author: Chunill
+language: zh
 timezone: ''
 
 # URL
