--- a/_config.yml
+++ b/_config.yml
@@ -103,6 +103,6 @@ theme: next
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo: https://github.com/<username>/<project>
+  repo: https://github.com/chunill/Notes-website
   # example, https://github.com/hexojs/hexojs.github.io
   branch: gh-pages
