--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -96,7 +96,7 @@ open_graph:
 # External url should start with http:// or https://
 menu:
   home: / || fa fa-home
-  #about: /about/ || fa fa-user
+  #note: /Note/ || fa fa-th
   #categories: /categories/ || fa fa-th
   #archives: /archives/ || fa fa-archive
   #schedule: /schedule/ || fa fa-calendar
